--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,111 @@
-.App {
-  text-align: center;
+*{
+  font-family: 'Roboto Condensed', sans-serif;
+  padding:0;
+  margin:0;
+  box-sizing: border-box;
+}
+body{
+  background:#1C1F32;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.task-container{
+  display:flex;
+  width:100%;
+  justify-content:center;
+  align-items:center;
+  height:100vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.task-container .form-group, .list-wrapper{
+
+  padding:50px;
+  padding-top:50px;
+  height:100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.list-wrapper{
+  background:#22263B;
+  flex:2
+}
+
+.task-wrapper{
+  display:flex;
+  background:#1C1F32;
+  padding:10px;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  color:#fff;
+  margin-bottom: 5px;
+}
+#checked{
+  background:#6670b1;
+  opacity:.5;
 }
 
-.App-link {
-  color: #61dafb;
+.task-wrapper .buttons{
+  display:flex;
+  color: #1C1F32;
+}
+.task-wrapper .buttons .task-button{
+  padding:5px;
+  margin:5px;
+  cursor:pointer;
+  transition: all 300ms;
+}
+.task-wrapper .buttons .task-button:hover{
+  transform:scale(1.2);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#edit{
+  color:#88EAFF;
+}
+.fa-pen-square:hover{
+  box-shadow: 0 0 30px 2px #88EAFF;
+}
+.fa-check-circle:hover{
+  box-shadow: 0 0 30px 2px #88FFB8;
+}
+#check{
+  color:#88FFB8;
+}
+#delete{
+  color:#FF8888;
+}
+.fa-trash:hover{
+  box-shadow: 0 0 30px 2px #FF8888;
+}
+.form-group{
+    flex:1;
+    display:flex;
+    align-items:center
+}
+.form-group #form{
+  color:#646379;
+  display:flex;
+  flex-direction: column;
+  width:100%;
+}
+
+input[type=text], textarea{
+  padding:20px;
+  outline:none;
+  background:#22263B;
+  border:none;
+  color:#fff;
+}
+
+textarea{
+  height:150px
+}
+
+.form-group button{
+  background:#88FFB8;
+  padding:20px;
+  cursor:pointer;
+  border:none;
+  transition: all 300ms;
+}
+.form-group button:hover{
+  background:#6acf93;
+
 }
